[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/bullet.gd" type="Script" id=1]
[ext_resource path="res://levels/resources/bullet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.73576, 1.67531 )

[node name="bullet" type="Node2D"]
light_mask = 8
script = ExtResource( 1 )

[node name="Bullet_kin_body" type="KinematicBody2D" parent="."]
position = Vector2( -2.38419e-007, 0 )

[node name="bullet_visibility" type="VisibilityNotifier2D" parent="Bullet_kin_body"]
position = Vector2( 0.270556, 5.00521 )
scale = Vector2( 0.391259, 0.0801239 )

[node name="Sprite" type="Sprite" parent="Bullet_kin_body"]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Bullet_kin_body"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet_kin_body/Area2D"]
position = Vector2( 0, -4.78468 )
rotation = 0.00210488
shape = SubResource( 1 )
[connection signal="screen_exited" from="Bullet_kin_body/bullet_visibility" to="." method="_on_bullet_visibility_screen_exited"]
[connection signal="area_entered" from="Bullet_kin_body/Area2D" to="." method="_on_Area2D_area_entered"]
